2005-12-05  Emfox Zhou  <emfoxzhou@gmail.com>
	* src/core/termview.cpp,
	src/core/termview.h,
	src/view/telnetcon.h,
	src/view/telnetview.cpp,
	src/view/telnetcon.cpp,
	src/view/telnetview.h: add Mouse Support for menu and list click. Current
	code is a little ugly and will be reworked soon.

	* TODO: metion ugly code of mouse support.

	* AUTHORS: add myself.

2005-12-04  Youchen Lee  <copyleft@utcr.org>

	* src/mainframe.h,
	src/mainframe.cpp: added CMainFrame::OnNotebookPopupMenu -- show popup-menu
	with "Close" and "Reconnect" menu items when right check mouse botton on 
	connection tabs.
	
	* po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po: updated related po files.

2005-12-04  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po : revise po files.

2005-11-15  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* src/sitepage.cpp,
	src/sitepage.h,
	src/generalprefpage.cpp,
	src/generalprefpage.h : move align checkbox to sitepage.cpp

2005-11-13  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* src/generalprefpage.h,
	src/generalprefpage.cpp,
	po/pcmanx.pot,
	po/zh_TW.po : Add align center checkbox to generalprefpage.cpp.

2005-11-07  Jim Huang  <jserv@kaffe.org>

	* src/pcmanx_pure_gtk2.cpp,
	src/pcmanx_gtk2.cpp: Rename from the former to the later.

	* pcmanx-pure-gtk2.spec.in,
	pcmanx-gtk2.spec.in: Likewise.
	Added zh_CN messages file.

	* Doxygen.in,
	src/Makefile.am,
	README,
	configure.ac,
	Makefile.am: Likewise.
	Suggested by: Emfox Zhou <emfoxzhou@gmail.com>.

2005-11-07  Jim Huang  <jserv@kaffe.org>

	* plugin/src/Makefile.am: Use AM_CXXFLAGS with -fPIC.
	Reported by: Emfox Zhou <emfoxzhou@gmail.com>.

2005-11-06  Kanru Chen  <koster@debian.org.tw>

	* src/mainframe.cpp
	(CMainFrame::updateBBSList):
	Wait child exit(0), call wait(NULL)

2005-11-01  Jim Huang  <jserv@kaffe.org>

	* plugin/src/Makefile.am:
	Enforce plugin shared library to be compiled with the -fPIC option.